# dida-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: IDENTITY.md  MEMORY.md.template  OVERVIEW.md  SOUL.md  TOOLS.md  USER.md
src/dida/: __init__.py  cli.py  config.py  const.py  exporter.py  importer.py
src/dida/commands/: data_import.py  export.py
src/dida/db/: __init__.py  connection.py  schema.py
tests/: test_cli.py
